FIX visibility bug

--- a/style.css
+++ b/style.css
@@ -26,8 +26,12 @@ body {
   width: 100%;
   height: 100%;
   flex-direction: column;
-  background: #fff;
+  background: var(--color-secondary);
+}
 
+
+.contain-icon{
+  color: #fff;
 }
 
 .container h6 {
